RESOLVED FIXED65348
*_list instructions are only used in one place, where the code is wrong.
https://bugs.webkit.org/show_bug.cgi?id=65348
Summary *_list instructions are only used in one place, where the code is wrong.
Oliver Hunt
Reported 2011-07-28 16:15:15 PDT
*_list instructions are only used in one place, where the code is wrong.
Attachments
Patch (12.43 KB, patch)
2011-07-28 16:16 PDT, Oliver Hunt
darin: review+
Oliver Hunt
Comment 1 2011-07-28 16:16:31 PDT
Oliver Hunt
Comment 2 2011-07-28 16:22:12 PDT
Note You need to log in before you can comment on or make changes to this bug.