*_list instructions are only used in one place, where the code is wrong. https://bugs.webkit.org/show_bug.cgi?id=65348

Reviewed by Darin Adler.

Simply remove the instructions and all users.  Speeds up the interpreter
slightly due to code motion, but otherwise has no effect (because none
of the _list instructions are ever used).

* bytecode/CodeBlock.cpp:
(JSC::isPropertyAccess):
(JSC::CodeBlock::dump):
(JSC::CodeBlock::visitStructures):
* bytecode/Instruction.h:
* bytecode/Opcode.h:
* interpreter/Interpreter.cpp:
(JSC::Interpreter::privateExecute):
* jit/JIT.cpp:
(JSC::JIT::privateCompileMainPass):

Canonical link: https://commits.webkit.org/81111@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91952 268f45cc-cd09-0410-ab3c-d52691b4dbfc